# deep-breath-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: changelog-config.json  changelog.yml  ci.yml  publish.yml
src/deep_breath_cli/: breath.py  presets.py  stats.py
tests/: test_breath_commands.py  test_breathing.py  test_presets.py  test_stats_advanced.py
