[project]
name = "deep-breath-cli"
version = "0.1.0"
description = "A command-line tool designed to help you relax from your terminal."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.1",
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest-cov>=6.2.1",
]
