[project]
name = "deep-breath-cli"
version = "1.1.1"
description = "A command-line tool designed to help you relax from your terminal."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Arthur Parmentier", email = "arthurparmentier99@gmail.com" }
]
license = { text = "MIT" }
keywords = ["breathing", "meditation", "wellness", "cli", "relaxation", "terminal", "stress"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "plotext>=5.3.2",
    "rich>=14.1.0",
    "typer>=0.16.0",
]

[project.scripts]
breath = "deep_breath_cli.breath:app"

[project.urls]
Homepage = "https://github.com/weart99/deep-breath-cli"
Repository = "https://github.com/weart99/deep-breath-cli"
Issues = "https://github.com/weart99/deep-breath-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
